<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/ScreenMainTitle"
        android:id="@+id/calendar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calendar_description"/>

    <TextView
        style="@style/Description"
        android:id="@+id/calendar_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_permission_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_title"
        app:layout_constraintBottom_toTopOf="@id/calendar_icon"/>

    <ImageView
        android:id="@+id/calendar_icon"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/ic_calendar_icon"
        android:tint="@color/secondaryTitleColor"
        android:contentDescription="@string/calendar_icon_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/accept_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_permissions"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/calendar_icon"
        app:layout_constraintBottom_toTopOf="@id/decline_permissions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/decline_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_permissions"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/accept_permissions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>