<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/ScreenMainTitle"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_settings_title"
        android:layout_marginBottom="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toggle_label"/>

    <TextView
        style="@style/Description"
        android:id="@+id/toggle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_toggle_label"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toggle_button"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/sync_label"/>

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/toggle_label"
        app:layout_constraintTop_toTopOf="@id/toggle_label"
        app:layout_constraintBottom_toBottomOf="@id/toggle_label"/>

    <TextView
        style="@style/Description"
        android:id="@+id/sync_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_sync_account"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/toggle_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sync_account"/>

    <Button
        style="@style/Description"
        android:id="@+id/sync_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/sync_label"
        app:layout_constraintTop_toTopOf="@id/sync_label"
        app:layout_constraintBottom_toBottomOf="@id/sync_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="example@gmail.com"/>

</android.support.constraint.ConstraintLayout>